--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,5 +5,21 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
+		<p>this is <em>my</em> web page and I am <strong>very</strong> proud of it</p>
+		<p>What</p>
+		<ul>
+			<li>is</li>
+			<li>an</li>
+			<li>unordered</li>
+			<li>list</li>
+		</ul>
+		<p>This</p>
+		<ol>
+			<li>is</li>
+			<li>an</li>
+			<li>ordered</li>
+			<li>list</li>
+		</ol>
+		<a href="https://developer.mozilla.org/en-US/docs/Web/HTML">Learn more html tags</a>
 	</body>
 </html>
