--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -21,5 +21,19 @@
 			<td>Nevada</td>
 		</tr>
 	</table>
+	<br>
+	<table border=1>
+		<tr>
+			<td rowspan="2">I dont understand this</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td colspan="2">at all</td>
+		</tr>
+		<tr>
+			<td colspan="3">Nevermind I got it</td>
+		</tr>
+	</table>
 </body>
 </html>
