--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Wildflowers Article</title>
-  <link href="style.css" rel="stylesheet" type="text/css"
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <section id="external-links">
