Forgot to add reflection and names.

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Karan Shetty
+2. Jon Bent
+We spent [1.5] hours on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -276,6 +276,6 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- I was able to learn a lot of things in this guided session, I was already familiar with the display property, however the guide had us try to use float, which neither of us were good with. we also learned how to use the background-image property, and clarify a lot of others. overall this was a very helpful session. -->
   </body>
 </html>
