forgot to commit changes, added everything challenge needed

--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Simple Project 9.2</title>
-</head>
-<body>
-	<h1>This is a header</h1>
-	<p>And this is some text in a paragraph</p>
-	
-</body>
+	<head>
+		<title>Simple Project 9.2</title>
+	</head>
+	<body>
+		<h1>This is a header</h1>
+		<p>And this is some text in a paragraph</p>
+		<p>Choose your browser!</p>
+		<nav>
+			<ul>
+				<li><a href="http://www.google.com">Google</a></li>
+				<li><a id="list_2" href="http://www.bing.com">Bing</a></li>
+				<li><a href="http://www.duckduckgo.com">Duck duck go</a></li>
+			</ul>
+		</nav>
+	</body>
+	<script src = "JS_DOM_edit.js"></script>
 </html>
